feat: add homepage structure with header, main content and footer
Implement the initial homepage structure for DevJobs including:
- Header with navigation and auth links
- Main content with search form and feature highlights
- Footer with copyright and legal links
- Added background image and styling configuration

--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -4,19 +4,150 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores web.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores web." />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="" />
+  </head>
+  <body>
+    <!--[if lt IE 7]>
+      <p class="browsehappy">
+        You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.
+      </p>
+    <![endif]-->
+
+    <header>
+      <h2>Devjobs</h2>
+      <nav>
+        <a href="">Inicio</a>
+        <a href="">Trabajos</a>
+      </nav>
+      <div>
+        <a href="">Publicar un Empleo</a>
+        <a href="">Iniciar Sesión</a>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <img src="./background.webp" alt="Banner de Devjobs" />
+        <h1>Encuentra tu próximo trabajo</h1>
+        <p>Encuentra tu próximo trabajo en tecnología. Publica tu perfil y busca trabajos en tu área.</p>
+
+        <form role="search">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="icon icon-tabler icons-tabler-outline icon-tabler-search"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M3 10a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+            <path d="M21 21l-6 -6" />
+          </svg>
+          <input type="text" placeholder="Buscar trabajos por título, palabra clave o área" />
+
+          <button type="submit">Buscar</button>
+        </form>
+      </section>
+
+      <section>
+        <header>
+          <h2>¿Por qué DevJobs?</h2>
+          <p>DevJobs es la mejor plataforma para encontrar trabajos para desarrolladores web. Publica tu perfil y busca trabajos en tu área.</p>
+        </header>
+
+        <footer>
+          <article>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-briefcase-2"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M3 9a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-9" />
+              <path d="M8 7v-2a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v2" />
+            </svg>
+            <h3>Publica tu perfil</h3>
+            <p>Publica tu perfil y comienza a recibir ofertas de trabajo.</p>
+          </article>
+
+          <article>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-users"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M5 7a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+              <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
+              <path d="M16 3.13a4 4 0 0 1 0 7.75" />
+              <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
+            </svg>
+            <h3>Busca trabajos</h3>
+            <p>Busca trabajos en tu área y encuentra el trabajo perfecto para ti.</p>
+          </article>
+
+          <article>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-building"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M3 21l18 0" />
+              <path d="M9 8l1 0" />
+              <path d="M9 12l1 0" />
+              <path d="M9 16l1 0" />
+              <path d="M14 8l1 0" />
+              <path d="M14 12l1 0" />
+              <path d="M14 16l1 0" />
+              <path d="M5 21v-16a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v16" />
+            </svg>
+            <h3>Encuentra tu próximo trabajo</h3>
+            <p>Encuentra tu próximo trabajo en tecnología. Publica tu perfil y busca trabajos en tu área.</p>
+          </article>
+        </footer>
+      </section>
+    </main>
+
+    <footer>
+      <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
+      <nav>
+        <a href="">Términos y Condiciones</a>
+        <a href="">Política de Privacidad</a>
+        <a href="">Contacto</a>
+      </nav>
+    </footer>
+  </body>
 </html>
