--- a/00-html-css/index.html
+++ b/00-html-css/index.html
@@ -10,7 +10,7 @@
     <title></title>
     <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores web." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <!--[if lt IE 7]>
